added transaction controller